# AeryEng

./: .gitignore  .gitmodules  Aery.sln  Aery.vcxproj  Aery.vcxproj.filters  CMakeLists.txt  Lunar.sln  Lunar.vcxproj  Lunar.vcxproj.filters  README.md  meson.build  win32_build.bat
assets/: compile.bat  default_frag.spv  default_gl.frag  default_gl.vert  default_vert.spv  hello.frag  hello.vert
examples/: main.cpp
ext/glfw/: CMakeLists.txt
inc/: Debug.h  Types.h
inc/GLFW/: glfw3.h
inc/Graphics/: Renderer.h  VkCommon.h  Window.h
inc/core/: common.h
inc/glad/: glad.h
inc/graphics/: gl_renderer.h  renderer.h  window.h
inc/math/: mat4.h  vec2.h  vec3.h  vec4.h
include/: Lunar.hpp  debug.hpp  types.hpp  window.hpp
include/graphics/: renderer.hpp  window.hpp
lib/: glad.c
old_src/: input.hpp  main.cpp
old_src/graphics/: window.ixx
old_src/graphics/vulkan/: vk_command_buffers.cpp  vk_common.cpp  vk_common.hpp  vk_depth_buffer.cpp  vk_frame_buffers.cpp  vk_instance.cpp  vk_physical_device.cpp  vk_shader.cpp  vk_swapchain.cpp  vk_sync_objects.cpp
old_src/utils/: debug.hpp  types.hpp
source/: window.cpp
source/graphics/: renderer.cpp  vk_boilerplate.cpp  window.cpp
src/: Lunar.ixx  Window.cpp  aery.hpp  common.cpp  input.cpp  input.hpp  main.cpp
src/Graphics/: Renderer.cpp
src/Graphics/vulkan/: vk_allocator.cpp  vk_common.cpp  vk_device.cpp  vk_messenger.cpp  vk_physical_device.cpp  vk_render_pass.cpp  vk_surface.cpp  vk_swapchain.cpp
src/Render/: Renderer.ixx  Window.cpp  Window.ixx
src/Render/vulkan/: vk_allocator.cpp  vk_base.cpp  vk_common.cpp  vk_common.hpp  vk_device.cpp  vk_messenger.cpp  vk_permanent_resources.cpp  vk_physical_device.cpp  vk_surface.cpp
src/Utils/: Debug.ixx  Numbers.ixx
src/graphics/: dx11_renderer.cpp  dx11_renderer.h  gl_renderer.cpp  gl_renderer.h  gl_renderer.hpp  renderer.cpp  rn_common.hpp  vk_object.hpp  vk_renderer.hpp  vk_shader.hpp  vk_uniform_buffer.hpp  window.cpp  window.hpp
src/graphics/vulkan/: vk_allocator.cpp  vk_base.cpp  vk_command_buffers.cpp  vk_common.cpp  vk_common.hpp  vk_debug_messenger.cpp  vk_depth_buffer.cpp  vk_frame_buffers.cpp  vk_instance.cpp  vk_logical_device.cpp  vk_object.cpp  vk_physical_device.cpp  vk_render_pass.cpp  vk_semaphores.cpp  vk_shader.cpp  vk_surface.cpp  vk_swapchain.cpp  vk_sync_objects.cpp  vk_utils.cpp
src/math/: mat4.hpp  vec2.cpp  vec2.hpp  vec3.hpp  vec4.hpp
src/utils/: debug.cpp  debug.hpp  file_io.cpp  file_io.hpp
submodules/glad/: CMakeLists.txt
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
subprojects/: fmt.wrap
